--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -1,8 +1,3 @@
-/**
- * index.scss
- * - Add any styles you want here!
- */
-
 @keyframes slideOut {
   0% {
     top: -30px;
@@ -25,6 +20,10 @@ body {
   overflow: hidden;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
 }
 
 #header {
@@ -123,13 +122,49 @@ body {
   height: 24px;
 }
 
+.email {
+  position: absolute;  /* Position relative to nearest positioned ancestor */
+  top: 0;              /* Align to the top */
+  right: 0;            /* Align to the right */
+  padding: 10px;       /* Optional: space around content */
+}
+
+.email-block {
+  position: absolute;
+  right: 30px;
+  left: 20%;
+  top: 20px;
+}
+
+.email-block a {
+  font-family: "Roboto Slab", sans-serif;
+  font-weight: 300;
+  font-size: 1.5625rem;
+  color: black;
+}
+
+.email-block a:hover {
+  opacity: .75;
+  box-shadow: none;
+}
+
 .content {
+  background: url();
   right: 30px;
   left: 20%;
   top: 120px;
   position: absolute;
   padding-bottom: 30px;
   max-width: 70vw;
+  display: flex; /* Flexbox layout */
+  justify-content: flex-start; /* Align children to the left */
+  align-items: flex-start; /* Align children at the top */
+  gap: 120px; /* Space between the two children */
+}
+
+.greeting {
+  flex: 0 0 auto; /* Prevent flexbox resizing */
+  text-align: left; /* Align text to the left inside this container */
 }
 
 .content h1 {
@@ -163,8 +198,6 @@ body {
 }
 
 .content h2 {
-  display: flex;
-  justify-content: space-between;
   width: 100%;
   font-size: 40px;
   padding: 0 0 20px;
@@ -173,23 +206,18 @@ body {
   color: rgba(255, 255, 255, 0.9);
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
   font-family: "Roboto Slab", sans-serif;
-  text-transform: uppercase;
 }
 
 .content p {
-  font-size: 16px;
+  font-size: 18px;
+  text-align: left;
   padding: 10px;
   line-height: 24px;
   color: #fefefe;
-  display: inline-block;
   background: black;
-  padding: 10px;
-  margin: 3px 0px;
-}
-
-.greeting {
-  flex: 1;
-  margin: 0 10px;
+  margin: 0; /* Remove unnecessary margins */
+  margin-bottom: 5px;
+  display: block;
 }
 
 .panel {
@@ -240,6 +268,29 @@ body {
   background-color: rgba(215, 215, 215, 0.65);
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #fefefe;
+  color: black;
+  text-align: center;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 15px;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer p {
+  margin-top: 10px;
+}
+
 @media all and (max-width: 500px) {
   .container {
     margin-top: 100px;
@@ -279,5 +330,17 @@ body {
     position: absolute;
     right: 0;
     top: 0;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
